# chetFit

./: README.md
geant4sim/: CMakeLists.txt  chet_sim.cc  run1.mac  run2.mac
geant4sim/include/: ActionInitialization.hh  ActionInitialization.hh~  DetectorConstruction.hh  DetectorConstruction.hh~  EventAction.hh  EventAction.hh~  HelixTrack.h  HelixTrack.h~  PhysicsList.hh~  PrimaryGeneratorAction.hh  PrimaryGeneratorAction.hh~  RunAction.hh  RunAction.hh~  SteppingAction.hh  SteppingAction.hh~  TrackerHit.hh  TrackerHit.hh~  TrackerSD.hh  TrackerSD.hh~  file.h  file.h~
geant4sim/macros/: run2.mac  vis.mac
geant4sim/src/: #RunAction.cc#  ActionInitialization.cc  ActionInitialization.cc~  DetectorConstruction.cc  DetectorConstruction.cc~  EventAction.cc  EventAction.cc~  HelixTrack.cc  HelixTrack.cc~  MuonDecayProcess.cc~  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.cc~  RunAction.cc  RunAction.cc~  SteppingAction.cc  SteppingAction.cc~  TrackerHit.cc  TrackerHit.cc~  TrackerSD.cc  TrackerSD.cc~  file.cc  file.cc~
geometry/: detectorGeometry_z20_fullGeo_7Cyl_Nopetals.root
src/: chet_genfit.C
